PHONE-9 : to add swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+
 
 
 
